--- a/app/package.json
+++ b/app/package.json
@@ -32,8 +32,10 @@
 		"@libsql/client": "^0.9.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@types/pg": "^8.15.2",
 		"better-sqlite3": "^11.10.0",
 		"dotenv": "^16.5.0",
-		"drizzle-orm": "^0.33.0"
+		"drizzle-orm": "^0.33.0",
+		"pg": "^8.16.0"
 	}
 }
